# RenderX-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_windows.bat  clean_windows.bat
assets/logo/: renderx.aps  renderx.rc
assets/scene/: example.rx  hello.rx
assets/shader/: base.frag
assets/shader/IBL/: pbr.fs
cmake/: global_settings.cmake
config/: config.h  config.h.in
engine/: CMakeLists.txt  common.h
engine/application/: CMakeLists.txt  main.cpp  renderxApp.cpp  renderxApp.h
engine/event/: CMakeLists.txt  event.cpp  event.h  event_dispatcher.h  keyboard_event.cpp  keyboard_event.h  mouse_event.cpp  mouse_event.h
engine/gui/: CMakeLists.txt
engine/gui/include/: environment_gui.h  gui.h  main_gui.h  properties_gui.h  scene_gui.h  viewport_gui.h
engine/gui/source/: environment_gui.cpp  gui.cpp  main_gui.cpp  properties_gui.cpp  scene_gui.cpp  viewport_gui.cpp
engine/input/: CMakeLists.txt  input_manager.cpp  input_manager.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
engine/log/: CMakeLists.txt  log.cpp  log.h
engine/openglcore/: CMakeLists.txt  thirdparty_header.cpp  thirdparty_header.h
engine/openglcore/include/: dynamic_mesh.h  framebuffer.h  gbuffer.h  indexbuffer.h  mesh.h  model.h  shader.h  static_mesh.h  texture.h  vertexarray.h  vertexbuffer.h  window.h
engine/openglcore/include/renderer/: camera.h  third_person_camera.h
engine/openglcore/source/: dynamic_mesh.cpp  framebuffer.cpp  gbuffer.cpp  indexbuffer.cpp  mesh.cpp  shader.cpp  static_mesh.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp  window.cpp
engine/openglcore/source/renderer/: camera.cpp  first_person_camera.cpp  third_person_camera.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/: IBL.h  atmosphere.h  camera.h  dynamic_mesh.h  editor_camera.h  light.h  material.h  mesh.h  model.h  skybox.h  static_mesh.h  third_person_camera.h
engine/renderer/source/: IBL.cpp  camera.cpp  dynamic_mesh.cpp  editor_camera.cpp  first_person_camera.cpp  light.cpp  mesh.cpp  model.cpp  skybox.cpp  static_mesh.cpp  third_person_camera.cpp
engine/renderxApp/: CMakeLists.txt  main.cpp  renderxApp.cpp  renderxApp.h
engine/scene/: CMakeLists.txt  component.h  entity.cpp  entity.h  render_scene.cpp  render_scene.h  scene.cpp  scene.h
engine/utils/: CMakeLists.txt  filesystem.cpp  filesystem.h  rendererUtils.cpp  rendererUtils.h  serializer.cpp  serializer.h  uuid.cpp  uuid.h
